k8s/front-end/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: microservices
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
    name: http
  type: ClusterIP
